# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.274 2009/12/23 01:32:38 caster Exp $

  23 Dec 2009; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.4.2.19.ebuild,
  -files/sun-jdk-1.4.env, -sun-jdk-1.5.0.20.ebuild,
  -sun-jdk-1.5.0.21.ebuild, -sun-jdk-1.6.0.15.ebuild,
  -sun-jdk-1.6.0.16.ebuild:
  Move 1.4 to java-overlay due to security and EOL (bug #287615). Cleanup.

  05 Nov 2009; Markus Meier <maekke@gentoo.org> sun-jdk-1.5.0.22.ebuild,
  sun-jdk-1.6.0.17.ebuild:
  amd64 stable, bug #291817

  05 Nov 2009; Markus Meier <maekke@gentoo.org> sun-jdk-1.6.0.17.ebuild:
  x86 stable, bug #291817

  05 Nov 2009; Markus Meier <maekke@gentoo.org> sun-jdk-1.5.0.22.ebuild:
  x86 stable, bug #291817

*sun-jdk-1.6.0.17 (04 Nov 2009)
*sun-jdk-1.5.0.22 (04 Nov 2009)

  04 Nov 2009; Vlastimil Babka <caster@gentoo.org> +sun-jdk-1.5.0.22.ebuild,
  +sun-jdk-1.6.0.17.ebuild:
  Version bump, security bug #291817

*sun-jdk-1.5.0.21 (29 Sep 2009)

  29 Sep 2009; Vlastimil Babka <caster@gentoo.org> +sun-jdk-1.5.0.21.ebuild:
  Version bump.

*sun-jdk-1.6.0.16 (18 Aug 2009)

  18 Aug 2009; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.5.0.19.ebuild,
  -sun-jdk-1.6.0.13.ebuild, -sun-jdk-1.6.0.14.ebuild,
  +sun-jdk-1.6.0.16.ebuild:
  Version bump, fixes JDWP threadid problems. Remove old.

  11 Aug 2009; Markus Meier <maekke@gentoo.org> sun-jdk-1.5.0.20.ebuild,
  sun-jdk-1.6.0.15.ebuild:
  amd64 stable, bug #280409

  06 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  sun-jdk-1.6.0.15.ebuild:
  stable x86, security bug 280409

  06 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  sun-jdk-1.5.0.20.ebuild:
  stable x86, security bug 280409

*sun-jdk-1.6.0.15 (06 Aug 2009)
*sun-jdk-1.5.0.20 (06 Aug 2009)

  06 Aug 2009; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.5.0.18.ebuild,
  +sun-jdk-1.5.0.20.ebuild, +sun-jdk-1.6.0.15.ebuild: