@@ -5,7 +5,10 @@ DIST jdk-5.0u22-dlj-linux-amd64.bin 44213188 RMD160 00cecc02b5a02b00732954f5dab6
 DIST jdk-5.0u22-dlj-linux-i586.bin 49782555 RMD160 f015e1502b357cccd45695a5c4bc41ba113d3a30 SHA1 611e56dd3dc0e25b286c374c60b56b5e76569fb2 SHA256 1c2e853b60e408176ec924e717fb7ec7953a9dddbfc397de91536e9084cf9e46
 DIST jdk-6u17-dlj-linux-amd64.bin 81905547 RMD160 5ad629c427e14bbf13c0fc8470c574a999350ab3 SHA1 a42bba8a2efe2a86403702507b99ff63086acea5 SHA256 9a7af862b4093ca7f1ca749f7774429a99321d08013c64af47df81887d80719a
 DIST jdk-6u17-dlj-linux-i586.bin 81824577 RMD160 07ad522edd80e19e71152e37544128ddd600c42c SHA1 bca59cb275f37b492e69ceecbda75a573d94b553 SHA256 4ba74424271670cc65405d6ab9a5480cb299ce9fb19c800096ce012d7d662b2e
+DIST jdk-6u18-dlj-linux-amd64.bin 84826124 RMD160 b8ff139c22e4c2e454ed7b2c7df1e34c0113d5a3 SHA1 4c16d02ecb7b0f729e3888da67310f7ea2e9f668 SHA256 6ec4d76ca50deb67ecf2ec6e4116c657bc67a0986957e51d42fbc2761063cb17
+DIST jdk-6u18-dlj-linux-i586.bin 84770500 RMD160 3c4f611e0593f6edb45f04399d9d049fae54359d SHA1 f7d0cefd581f523ac96ca99eb54ba4116fa29e0a SHA256 1097aa37004163878f61b3522fe7d13bdf7e1f10796fc43022011d4c5f4092bb
 EBUILD sun-jdk-1.5.0.22.ebuild 4158 RMD160 b6fc5b93757f79a93c4eb1c8f3ee211d8cbbf778 SHA1 e441ee623cea36114c124ef4fee1b926a1139d11 SHA256 9556b4bae4467020e084fb945cc8725bd6b9bc7167fcaef2067e17784a555038
 EBUILD sun-jdk-1.6.0.17.ebuild 5098 RMD160 747fce5e35a4021cf3c686bf07d6cc67c0db6875 SHA1 d1c8d3009b55a8bda9c35257d08370a3fac2f3d0 SHA256 21115d41ea6b79da9145d25fcc425ac99febf8d4b383a2095a1b2a381de22d75
-MISC ChangeLog 51391 RMD160 987568786bf60b613d7fcce1804bef6fdc350f16 SHA1 4f6b1302e44e325bcc135dca3128721de42e9eea SHA256 11b4548abf0643e6be3028c948d982001d49c87daf8d6c1c1ea5fe40a27b47d7
+EBUILD sun-jdk-1.6.0.18.ebuild 5100 RMD160 7015aa1f2c51930170471894b9d12c38fc6897e1 SHA1 fcc0ed3ace8756ae8314b22560590436b82d93af SHA256 8e6ebd5fb1b738358c57d6d37602c2ce47c9a3910b6364b8fca1d4c911902a42
+MISC ChangeLog 51518 RMD160 18145734efb20acb20631545382e4e00e2190a22 SHA1 1f1a585ffc940aed06bf14f1253a8304f86c3cb3 SHA256 33f3cbf091d96e10eb75e1c5ff8ee0f01d814b5774d0650932c0da9416255153
 MISC metadata.xml 429 RMD160 e6edae84d0d56c48e9d6e631d1f0612535f26f2d SHA1 4b6faf61f3869bbbccc405c7c07932dd630737ea SHA256 2fef8162216b2e78806cdc6ba5b0ff2619a482aa3ce0ecf909ffa17ba309428c
